firefox font wrap fix 3

--- a/stylesheets/main/main.css
+++ b/stylesheets/main/main.css
@@ -126,9 +126,9 @@ body {
 }
 #iconUl li p{
 	display: inline-block;
-	margin: 1em 2em 0 1em;
+	margin: 1em 1em 0 1em;
 	color: black;
-	font-size: 1em;
+	font-size: .9em;
 }
 
 #iconUl i {
@@ -160,8 +160,8 @@ body {
 /*This part is for the about box not the H2s */
 #about p {
 	text-align: center;
-	margin: 2em .5em 6em 2em;
-	font-size: .8em;
+	margin: 2em 2em 6em 2em;
+	font-size: 1em;
 	color: white;
 }
 
